raffia/tests/error/scss/value/function-call/comments-in-arbitrary-arg-2.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ comments-in-arbitrary-arg-2.scss:2:22
  │
2 │   width: calc($a/*a*/...);
  │                      ^^^


